[package]
name = "ipv-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

tokio = { version = "1.46", default-features = false, features = ["rt", "net", "time", "macros"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest = { version = "0.12", features = ["json"] }
tokio-util = "0.7.15"

clap = { version = "4.5", features = ["derive"] }
