[package]
name = "ipv-proxy"
version = "0.2.1"
edition = "2024"

[dependencies]
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["json"] }

tokio = { version = "1.52", default-features = false, features = ["rt", "net", "time", "macros", "process"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest = { version = "0.13", features = ["json"] }
tokio-util = "0.7.18"

clap = { version = "4.6", features = ["derive"] }
